Fixing bugs, but it does not work

--- a/testing_scripts/test_discriminator.ipynb
+++ b/testing_scripts/test_discriminator.ipynb
@@ -65,19 +65,18 @@
       "        LeakyReLU-29           [4, 512, 24, 24]               0\n",
       "DiscriminatorResBlock-30           [4, 512, 24, 24]               0\n",
       "AdaptiveAvgPool2d-31             [4, 512, 1, 1]               0\n",
-      "          Flatten-32                   [4, 512]               0\n",
-      "           Linear-33                  [4, 1000]         513,000\n",
-      "        LeakyReLU-34                  [4, 1000]               0\n",
-      "           Linear-35                     [4, 1]           1,001\n",
+      "           Conv2d-32            [4, 1024, 1, 1]         525,312\n",
+      "        LeakyReLU-33            [4, 1024, 1, 1]               0\n",
+      "           Conv2d-34               [4, 1, 1, 1]           1,025\n",
       "================================================================\n",
-      "Total params: 5,203,089\n",
-      "Trainable params: 5,203,089\n",
+      "Total params: 5,215,425\n",
+      "Trainable params: 5,215,425\n",
       "Non-trainable params: 0\n",
       "----------------------------------------------------------------\n",
       "Input size (MB): 6.75\n",
-      "Forward/backward pass size (MB): 2124.09\n",
-      "Params size (MB): 19.85\n",
-      "Estimated Total Size (MB): 2150.69\n",
+      "Forward/backward pass size (MB): 2124.08\n",
+      "Params size (MB): 19.90\n",
+      "Estimated Total Size (MB): 2150.72\n",
       "----------------------------------------------------------------\n"
      ]
     }
