--- a/testing_scripts/test_generator.ipynb
+++ b/testing_scripts/test_generator.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -33,7 +33,7 @@
    ],
    "source": [
     "\n",
-    "genResBlock = GeneratorResBlock()\n",
+    "genResBlock = GeneratorResBlock(channels=644)\n",
     "\n",
     "x = torch.randn(size=(1, 64, 96, 96))\n",
     "print(f\"x shape={x.shape}\")\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
